Feature/implement db read lambda function (#2)
* fix API

* fix gitignore

* jsonに変換する処理を追加

* 実装完了

* 不要なテストを削除
